# claude-code-metrics-lab

./: .env.sample  .gitignore  CLAUDE.org  Makefile  README.org  SETUP.org  TELEMETRY_APPROACH_SUMMARY.md  TELEMETRY_EXPERIMENT_PHASE1.md  claude-metrics-guide.md  dashboard.org  dashboard.org~  docker-compose.dev.yml  generator.org  http-interceptor-workshop.org  main.py  netcat-otlp-exercises.org  org-file-summary.org  pyproject.toml  requirements.txt  setup.org  technical-guide.org  telemetry-approach-summary.org  telemetry-experiment-phase1.org  test-metric-fixed.json  test_implementation.py  test_logging_proxy.py  test_matrix.py
config/: alertmanager-dev.yml  logging_proxy.yaml  nginx-dev.conf  otel-collector-dev.yaml  prometheus-dev.yml  prometheus-rules-dev.yml  simulator-config.yml
dashboards/: claude-project-tracking.json
docker/: Dockerfile.scenario-runner  Dockerfile.simulator
docs/: dashboard.mmd  github-issue-prometheus-simulator.md  github-issue-telemetry-approach.md  setup.org  simulator-rfc-implementation.md  telemetry-architecture.mmd  telemetry-contracts.md  telemetry-contracts.org
queries/: useful-queries.yaml
scripts/: claude-metrics-simulator.py  claude-metrics-simulator.scm  claude-metrics-simulator.scm~  generate_dashboards.py  generate_tcs_badges.py  otlp-http-interceptor.sh  scenario_runner.py  tcs-report-generator.sh  test_dashboard.py
src/: cost_analyzer.py  logging_proxy.py  metrics_integration.py  metrics_simulator.py  project_metrics.py  session_analyzer.py
test_results/: configuration_matrix.yaml  test_report.json  (+1 more)
(+24 files in other folders)
