[project]
name = "claude-code-metrics-lab"
version = "0.1.0"
description = "OpenTelemetry-based metrics tracking and analysis for Claude Code usage patterns, costs, and efficiency"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
